--- a/tehnika.html
+++ b/tehnika.html
@@ -8,41 +8,6 @@
     <link rel="stylesheet" href="css/agro_tehnika.css">
     <script defer src="./js/mainButton.js"></script>
 </head>
-<style>
-    .tehnika_block {
-        width: 307px;
-        height: 400px;
-        border: 2px solid #2F7B80;
-    }
-
-    .tehnika_block img {
-        width: 307px;
-        height: 273px;
-    }
-
-    .colomn_tehnika {
-        display: flex;
-        gap: 30px;
-        flex-wrap: wrap;
-        text-align: center;
-    }
-
-    .tehnika_block p {
-        text-align: center;
-    }
-
-    .tehnika_button {
-        display: flex;
-        justify-content: center;
-        padding: 40px;
-    }
-
-    .tehnika_carusel {
-        display: flex;
-        gap: 40px;
-        flex-wrap: wrap;
-    }
-</style>
 
 <body>
     <header>
@@ -55,7 +20,7 @@
                 </svg>
             </button>
             <div class="header_log_head">
-                <div><a href="#"><img width="106" height="67" src="./img/heder-futer-img/logo.png" alt="logo"></div>
+                <div><a href="./index.html"><img width="106" height="67" src="./img/heder-futer-img/logo.png" alt="logo"></div>
                 <div>Ангары
                     и<br>сельхозтехника<br>от производителя</a>
                 </div>
@@ -92,7 +57,7 @@
         <div class="contener">
             <div class="header_log">
                 <div class="header_log_head">
-                    <div class="hover_efect"><a href="#"><img width="106" height="67"
+                    <div class="hover_efect"><a href="./index.html"><img width="106" height="67"
                                 src="./img/heder-futer-img/logo.png" alt="logo"></div>
                     <div class="hover_efect">Ангары
                         и<br>сельхозтехника<br>от производителя</a>
@@ -355,8 +320,8 @@
                 <div class="futer_culomn">
                     <div class="futer_efect">
                         <div class="futer_logo">
-                            <a><img src="./img/heder-futer-img/logo.png" alt=""></a>
-                            <a href="">Ангары и сельхозтехника от производителя</a>
+                            <a href="./index.html"><img src="./img/heder-futer-img/logo.png" alt=""></a>
+                            <a href="./index.html">Ангары и сельхозтехника от производителя</a>
                         </div>
                         <a href=”tel:+7-928-212-22-19>8-928-212-22-19</a><br>
                         <a href=”tel:+7-928-778-92-80>8-928-778-92-80</a>
@@ -409,8 +374,8 @@
                 <div class="futer_culomn_mobile">
                     <div>
                         <div class="futer_logo">
-                            <a><img src="./img/heder-futer-img/logo.png" alt=""></a>
-                            <a href="">Ангары и сельхозтехника от производителя</a>
+                            <a href="./index.html"><img src="./img/heder-futer-img/logo.png" alt=""></a>
+                            <a href="./index.html">Ангары и сельхозтехника от производителя</a>
                         </div>
                         <a href=”tel:+7-928-212-22-19>8-928-212-22-19</a><br>
                         <a href=”tel:+7-928-778-92-80>8-928-778-92-80</a>
