--- a/index.html
+++ b/index.html
@@ -166,13 +166,13 @@
                                 alt="angar-svinarnik">
                         </div>
                         <div class="colomn_gorizont">
-                            <div><img width="41" height="42" src="./img/home-img/height.svg">От 12 до 28<br> метров
-                            </div>
-                            <div><img width="42" height="42" src="./img/home-img/termometr.svg">Утепление
+                            <div><div><img width="41" height="42" src="./img/home-img/height.svg"></div><div>От 12 до 28<br> метров
+                            </div></div>
+                            <div><div><img width="42" height="42" src="./img/home-img/termometr.svg"></div><div>Утепление
                                 <br>пенополиуретаном
-                            </div>
-                            <div><img width="41" height="42" src="./img/home-img/fan.svg">Монтаж системы <br>вентиляции
-                            </div>
+                            </div></div>
+                            <div><div><img width="41" height="42" src="./img/home-img/fan.svg"></div><div>Монтаж системы <br>вентиляции
+                            </div></div>
                         </div>
                         <p>Цена рассчитывается индивидуально по согласованному техническому заданию</p>
                         <div>
@@ -227,14 +227,14 @@
                             <img width="645" height="682" src="./img/main-img/frame.jpg" alt="angar-frame">
                         </div>
                         <div class="colomn_gorizont">
-                            <div><img width="41" height="42" src="./img/home-img/height.svg">От 12 до 28<br> метров
+                            <div><div><img width="41" height="42" src="./img/home-img/height.svg"></div><div>От 12 до 28<br> метров</div>
                             </div>
-                            <div><img width="42" height="42" src="./img/main-img/sewage.svg">Монтаж системы<br>
+                            <div><div><img width="42" height="42" src="./img/main-img/sewage.svg"></div><div>Монтаж системы<br>
                                 водоотлива<br>
-                                (опционально)
+                                (опционально)</div>
                             </div>
-                            <div><img width="41" height="42" src="./img/main-img/drain.svg">Зашивка боковых <br>стен
-                                (опционально)
+                            <div><div><img width="41" height="42" src="./img/main-img/drain.svg"></div><div>Зашивка боковых <br>стен
+                                (опционально)</div>
                             </div>
                         </div>
                         <p>Цена рассчитывается индивидуально по согласованному техническому заданию</p>
